# monet

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  sync_script.py  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial.sql  002_add_categories.sql  003_balance_snapshots.sql  004_budgets_and_flags.sql  005_add_merchant.sql
src-tauri/src/: auth.rs  db_cmds.rs  google_oauth.rs  lib.rs  setup_cmds.rs
src/components/: CommandPalette.tsx  FloatingActionButton.tsx  Layout.tsx  Nav.tsx  Sidebar.tsx  TopBar.tsx
src/components/ui/: Amount.tsx  AppIcons.tsx  Badge.tsx  BankIcon.tsx  Button.tsx  Card.tsx  ConfirmDialog.tsx  EmptyState.tsx  Input.tsx  Modal.tsx  Select.tsx
src/features/accounts/: AccountForm.tsx  AccountsPage.tsx
src/features/budgets/: BudgetsPage.tsx
src/features/categories/: CategoriesPage.tsx
src/features/dashboard/: DashboardPage.tsx
src/features/insights/: InsightsPage.tsx
src/features/settings/: SettingsPage.tsx
src/features/transactions/: TransactionFormModal.tsx  TransactionsPage.tsx
src/hooks/: useKeyboardShortcut.ts
src/lib/: authErrors.ts  categories.ts  db.ts  finance.ts  types.ts  utils.ts
src/lib/repositories/: accountRepository.ts  authRepository.ts  budgetRepository.ts  categoryRepository.ts  insightsRepository.ts  settingsRepository.ts  transactionRepository.ts
src/store/: accountStore.ts  budgetStore.ts  categoryStore.ts  transactionStore.ts  uiStore.ts
src/styles/: tokens.css
