[package]
name = "monet-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "monet_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tauri-plugin-biometric = "2"
rusqlite = { version = "0.39.0", features = ["bundled-sqlcipher"] }

tauri-plugin-store = "2.4.2"
base64 = "0.22.1"
getrandom = "0.4.2"
webauthn-rs = "0.5.0"
url = "2.5.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15.7"
ring = "0.17.8"
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }
